Feb-12-2002 - Kurt Granroth (v1.1)
  o Restructuring change to make kapptemplate behave a little better
    during installation.  Now, the standard 'make' commands should
    work.  The 'install-me' script is gone.

Nov-10-2001 - Simon Hausmann
  o Added missing kstatusbar.h include in app.cpp
  o Use KParts::GenericFactory and KGenericFactory to reduce
    boilerplate code

Jul-30-2001 - Kurt Granroth
  o KAppTemplate isn't really a 'sh' shell script.. it's a 'bash'
    shell script.  Changed #! line to reflect this.

Jul-06-2001 - Kurt Granroth
  o Fixed 'configure toolbar' in part app template
  o KIONetAccess is now (and has been for some time) KIO::NetAccess

Jul-05-2001 - Kurt Granroth (v1.0.6)
  o KPartApp's part should be in it's own directory.  Did it ever work
    as-was?  XML merging between shell and part should now work.
  o Added new hi-color default icons to kpartapp and kapp

Jun-30-2001 - David Faure
  o Include .moc files in .cpp files in kapp template

Mar-29-2001 - Nikolas Zimmermann
  o Converted kapp template to use new KPrinter printing framework

Feb-16-2001 - Kurt Granroth (v1.0.5)
  o KParts::Factory, it seems, should not be used with plugins

Feb-15-2001 - Kurt Granroth (v1.0.4)
  o Create a "real" factory for the KPart plugins instead of using a
    generic one
  o Use 'find' instead of 'ls' for listing files.  Works better on
    FreeBSD.  Thanks to Jonathan Belson <jon@witchspace.com> for the
    heads up.
  o Fixed command line args and module selection code.  Thanks to
    David Jarvie <djarvie@lineone.net> for the fix.

Feb-04-2001 - Kurt Granroth (v1.0.3)
  o Converted App::load method to use KURL instead of QString in kapp
    module
  o Added +[URL] command line option in kapp module

Feb-04-2001 - Simon Hausman (v1.0.2)
  o Converted App::load method to use KURL instead of QString in kpart
    module
  o Used correct constructor for Part in kpart module
  o Used correct instance() in kpart module